--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "leaflet": "^1.9.4",
     "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
+    "motion": "^12.23.25",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
