--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@heroui/react": "^3.0.0-beta.2",
     "@heroui/styles": "^3.0.0-beta.2",
     "@iconify/react": "^6.0.2",
-    "@react-router/node": "^7.9.2",
-    "@react-router/serve": "^7.9.2",
+    "@react-router/node": "^7.9.6",
+    "@react-router/serve": "^7.9.6",
     "@tma.js/sdk-react": "^3.0.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eruda": "^3.4.3",
     "framer-motion": "^12.23.25",
     "isbot": "^5.1.31",
     "leaflet": "^1.9.4",
