--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-router/node": "^7.9.6",
     "@react-router/serve": "^7.9.6",
     "@tma.js/sdk-react": "^3.0.11",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eruda": "^3.4.3",
