--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconify/react": "^6.0.2",
     "@react-router/node": "^7.9.6",
     "@react-router/serve": "^7.9.6",
+    "@tanstack/react-query": "^5.90.20",
     "@tma.js/sdk-react": "^3.0.11",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
